# chatminer

./: .gitignore  README.md  pyproject.toml
chatminer/: app.py  commands.py  common.py  config.py  db.py  parser.py  plotter.py  printer.py  processor.py  sqlitedb.py  viz.py
chatminer/model/: block.py  message.py  notification.py
