[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chatminer"]

[project]
name = "chatminer"
version = "0.1"
authors = [
    { name = "Tommaso Brandirali", email = "tbrandirali-dev@pm.me" },
]
description = "A small tool with terrible power: analyse, query, and plot your WhatsApp chats analytics.\nWARNING: may pose a risk to the wellbeing of romantic relationships."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'matplotlib',
    'dateutils',
    'platformdirs',
    'pandas',
    'milc',
    'tabulate',
    'emoji'
]

[project.urls]
Homepage = "https://github.com/tbrandirali/chatminer"
Issues = "https://github.com/tbrandirali/chatminer/issues"

[project.scripts]
chatminer = "chatminer.app:main"
